--- a/assets/less/directus/responsive.less
+++ b/assets/less/directus/responsive.less
@@ -17,14 +17,6 @@
 		.unread-color {
 			margin-left: -4px;
 		}
-		.sidebar-tables-shortcut {
-			position: absolute;
-			bottom: 200px;
-			left: 20px;
-			.icon {
-				font-size: 50px;
-			}
-		}
 		// Hide sub-items in sidebar
 		.sidebar-subitem {
 			display: none;
@@ -38,6 +30,15 @@
 		#mainSidebar {
 			top: 70px;
 			overflow: hidden;
+			.sidebar-tables-shortcut {
+				display: block;
+				position: absolute;
+				bottom: 200px;
+				left: 20px;
+				.icon {
+					font-size: 50px;
+				}
+			}
 			.sidebar-extension,
 			.sidebar-section {
 				margin: 0;
