--- a/assets/less/directus/sidebar.less
+++ b/assets/less/directus/sidebar.less
@@ -75,6 +75,9 @@ body.initial-load #sidebar {
     .responsive-nav {
       display: none;
     }
+    .sidebar-tables-shortcut {
+      display: none;
+    }
     .sidebar-section, .sidebar-extension {
       margin-bottom: 10px;
       margin-top: 15px;
